

==============================
Release 5.6.0.0
==============================
2015-11-10    NumberBox: Rename Currency by Unit
              NumberBox: Bind the visibility of the unity by its set value
              NumberBox: Number written in the XAMl directly were not taken for all types except BigInteger
              NumberBox: Add IsReadOnly property
2015-11-08    NumberBox: Renew the NumberBox and extend it with many new features
2015-10-08    VisualTreeAssist: Rename Childs by Children
2015-10-07    BrowseTextBox: Prevent browse button to be shared if placed in the same panel
              SearchTextBox: Prevent search and cancel button to be shared if placed in the same panel
2015-09-30    EventToCommand: Add EventToCommand to be able to connect control events to ICommands via bindings
2015-09-25    ListBehavior: Add ListBehavior with click and doubleclick behaviors in UI lists
              WindowTitleBarBehavior: Adjust base objects, all Behaviors should have the same base object
2015-09-23    EnumerationComboBox: Take enum type from the SelectedItem when set without a binding
2015-09-22    EnumerationComboBox: Take type from the SelectedItem as fallback if EnumType is not set


==============================
Release 5.4.0.0
==============================
2015-08-27    EnumerationComboBox: Renew the control with more possibility how to display the values (Thanks to Christoph Dreßler!)
2015-08-05    NumberBox: When value is null step up and step down starts from the minimum or maximum value (Thanks to Thomas Kortschack!)
2015-08-04	  NumberBox: Handle up and down steps differently in the case of an invalid value
              NumberBox: Add support for a null default value (Thanks to Thomas Kortschack!)
2015-07-20	  BindingExtension: Added BindingExtension to be able to change all binding parameters by another bindings
2015-05-02    CutTooltipBehavior: Add CutTooltipBehavior